--- a/src/views/partials/template.hbs
+++ b/src/views/partials/template.hbs
@@ -8,12 +8,19 @@
 
 <body>
     <header>
-        {{> nav}}
+        {{#if autenticacion}}
+            {{> navuser}}
+        {{else}}
+            {{> nav}}
+        {{/if}}
     </header>
 
     {{> @partial-block}}
 
     {{> footer}}
 </body>
-{{> scripts}}
+<div>
+    {{> scripts}}
+</div>
+
 
