--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -22,9 +22,17 @@
                 <li class="nav-item">
                 <a class="nav-link active" href="/html/que_es_ofertapp.html">¿Qué es Ofertapp?</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/login">Login</a>
+                <li>
+                    <div>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/registro">Registrarse</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/login">Ingresar</a>
+                        </li>
+                    </div>
                 </li>
+                
             </ul>             
             </div>
         </div>
