Página de registro

--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,7 +1,7 @@
 {{#> template}}
 
-<main>
-    <div class="card" style="width: 18rem;">
+<main id="main-login">
+    <div class="card" style="width: 20rem;">
 
         <div class="card-body">
             <h5 class="card-title">Login</h5>
