--- a/src/views/subir-oferta.hbs
+++ b/src/views/subir-oferta.hbs
@@ -2,11 +2,10 @@
 
 {{#> template}}
 
-
 <main  id="main-subir">
-    <div class="card" style="width: 30rem;">
+    <div class="card" style="width: 20rem;">
         <div class="card-img-top" >
-            <img src="/img/logo.jpg" alt="Imagen no Disponible" id="vistaPrevia" style="height: 20rem; width:25rem">
+            <img src="/img/subir.png" alt="Imagen no Disponible" id="vistaPrevia" style="height: 20rem; width:25rem">
         </div>
         <div class="card-body">
             <form id="formSubir" action="oferta-nueva">
