--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -1,12 +1,12 @@
 
 .navbar, .container-fluid, .navbar-brand, .navbar-collapse, .navbar-nav, .nav-item, .nav-link{
-    background-color: rgba(255, 0, 0, 0) !important;
+    background-color: rgb(255, 255, 255,1) !important;
     color: rgb(0, 0, 0)!important;
     border-bottom: #000000;
 }
 
 .nav-item:hover:hover, .nav-link:hover, .navbar-brand:hover{
-    border-bottom: rgb(0, 0, 0) 1px solid!important;
+    box-shadow: inset 0 -1px 0  rgb(0, 0, 0);
 }
 
 .container-fluid{
@@ -14,6 +14,7 @@
 }
   
 #logo{
+ 
     height:250px;
 }
 
@@ -21,6 +22,9 @@
     background-color: #000000;
     display: flex;
     justify-content: center;
+    width: 100%;
     height: 260px;
+    margin-top: 50px;
+    margin-bottom: 2%;
 }
 
