--- a/src/public/css/subir.css
+++ b/src/public/css/subir.css
@@ -1,16 +1,19 @@
 .card-img-top{
     display: flex;
     justify-content: center;
+    filter: brightness(1.1);
+    mix-blend-mode: multiply;
 }
 
 #btn-subir{
     width: 100%;
 }
 
-#main-subir{
+#main-subir, #main-login{
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
+
 
