--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -1,39 +1,37 @@
-
-    <div id="divLogo">
-        <img src="/img/logo.jpg" alt="Imagen no disponible" id="logo" title="Ofertapp">
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/index">Inicio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/index">Inicio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon "></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/html/busqueda.html">Buscar</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" href="/subir-oferta">Subir oferta</a>
+                    <a class="nav-link active" aria-current="page" href="/html/busqueda.html">Buscar</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="/html/contacto.html">Contacto</a>
+                    <a class="nav-link active" href="/subir-oferta">Subir oferta</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="/html/que_es_ofertapp.html">¿Qué es Ofertapp?</a>
+                    <a class="nav-link active" href="/html/contacto.html">Contacto</a>
                 </li>
-                <li>
-                    <div>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/registro">Registrarse</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/login">Ingresar</a>
-                        </li>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/html/que_es_ofertapp.html">¿Qué es Ofertapp?</a>
                 </li>
-                
-            </ul>             
-            </div>
+
+                <li class="nav-item">
+                    <a class="nav-link active" href="/registro">Registrarse</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/login">Ingresar</a>
+                </li>
+
+
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
+<div id="divLogo">
+    <img src="/img/logo.jpg" alt="Imagen no disponible" id="logo" title="Ofertapp">
+</div>
