--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -20,6 +20,10 @@
             </form>
             
         </div>
+        <div class="card-footer" >
+            <p>¿No tienes una cuenta? Regístrate!</p>
+            <button class="btn btn-primary"><a href="/registro" style="color: white">Registrarse</a></button>
+        </div>
     </div>
 </main>
 {{/template}}
