Creacion y guardado de oferta nueva

--- a/src/views/subir-oferta.hbs
+++ b/src/views/subir-oferta.hbs
@@ -26,7 +26,7 @@
                     <input list="categorias" type="text" class="form-control" id="categoria" name="categoria" required>
                     <datalist id="categorias">
                         {{#each categorias}}
-                        <option value="{{this}}">
+                        <option value="{{this}}">{{this}}</option>
                         {{/each}}
                     </datalist>
                 </div>
