--- a/src/views/subir-oferta.hbs
+++ b/src/views/subir-oferta.hbs
@@ -3,7 +3,7 @@
 {{#> template}}
 
 <main  id="main-subir">
-    <div class="card" style="width: 20rem;">
+    <div class="card card-subir" style="width: 20rem;">
         <div class="card-img-top" >
             <img src="/img/subir.png" alt="Imagen no Disponible" id="vistaPrevia" style="height: 20rem; width:25rem">
         </div>
