--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -14,8 +14,8 @@
 }
   
 #logo{
- 
-    height:250px;
+    height:200px;
+    width: 200px;
 }
 
 #divLogo{
@@ -23,8 +23,8 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 260px;
+    height: 210px;
     margin-top: 50px;
-    margin-bottom: 2%;
+   
 }
 
