--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,7 +1,7 @@
 {{#> template}}
 
 <main id="main-login">
-    <div class="card" style="width: 20rem;">
+    <div class="card" >
 
         <div class="card-body">
             <h5 class="card-title">Login</h5>
