--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -17,7 +17,7 @@
                     <a class="nav-link active" href="/html/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/html/que_es_ofertapp.html">¿Qué es Ofertapp?</a>
+                    <a class="nav-link active" href="/que-es-ofertapp">¿Qué es Ofertapp?</a>
                 </li>
 
                 <li class="nav-item">
