Página de contacto

--- a/src/views/partials/navuser.hbs
+++ b/src/views/partials/navuser.hbs
@@ -15,7 +15,7 @@
                     <a class="nav-link active" href="/subir-oferta">Subir oferta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/html/contacto.html">Contacto</a>
+                    <a class="nav-link active" href="/contacto">Contacto</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/que-es-ofertapp">¿Qué es Ofertapp?</a>
