--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -15,7 +15,9 @@
                     <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
-                
+                {{#if message.error}}
+                    <div class="alert alert-danger">{{message.error}}</div>
+                {{/if}}
                 <button type="submit" class="btn btn-primary">Ingresar</button>
             </form>
             
