--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/html/busqueda.html">Buscar</a>
+                    <a class="nav-link active" aria-current="page" href="/busqueda">Buscar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/subir-oferta">Subir oferta</a>
