Implementacion JWT con comprobación en API

--- a/src/views/busqueda.hbs
+++ b/src/views/busqueda.hbs
@@ -1,7 +1,7 @@
 {{#> template}}
 
 <main>
-    <form action="http://localhost:3000/buscar/" method="get">
+    <form action="http://localhost:3000/buscar" method="get">
         <div class="mb-3">
             <input type="text" class="form-control" id="busqueda" placeholder="¿Qué buscas?" name="busqueda">
         </div>
