--- a/src/views/resultados.hbs
+++ b/src/views/resultados.hbs
@@ -1,6 +1,6 @@
 {{#> template}}
-
-<main>
+<head><link rel="stylesheet" href="/css/resultados.css"></head>
+<main class="main-resultados">
     <form action="/buscar" method="get">
         <div class="mb-3">
             <input type="text" class="form-control" id="busqueda" placeholder="¿Qué buscas?" name="busqueda">
@@ -9,7 +9,7 @@
     </form>
     <div class="container-ofertas">
         {{#each respuesta}}
-        <div class="card" style="width: 100rem;">
+        <div class="card" >
             <img src="{{imagen}}" class="card-img-top card-result" alt="Imagen no encontrada">
             <div class="card-body">
                 <h5 class="card-title">{{lugar}}</h5>
@@ -24,3 +24,4 @@
 </main>
 
 {{/template}}
+<script src="js/codificar-imagen.js"></script>
