--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -6,3 +6,4 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/subir.css">
 <link rel="stylesheet" href="/css/resultados.css">
+<link rel="stylesheet" href="/css/busqueda.css">
