--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -5,7 +5,7 @@
 
         <div class="card-body">
             <h5 class="card-title">Login</h5>
-            <form action="ingreso" method="post">
+            <form action="ingreso" method="post" id="form-login">
                 <div class="mb-3">
                     <label for="user" class="form-label">Correo electrónico</label>
                     <input type="email" class="form-control" id="user" name="username" required>
