--- a/src/views/partials/template.hbs
+++ b/src/views/partials/template.hbs
@@ -3,6 +3,8 @@
 <head>
     {{> head}}
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/contacto.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 
 <body>
