--- a/src/views/subir-oferta.hbs
+++ b/src/views/subir-oferta.hbs
@@ -7,7 +7,7 @@
         <div class="card-img-top" >
             <img src="/img/subir.png" alt="Imagen no Disponible" id="vistaPrevia" style="height: 20rem; width:25rem">
         </div>
-        <div class="card-body">
+        <div class="card-body" id="body-card-subir">
             {{#if subidaOferta}}
                 <div class="mb-3">
                     <p style="color: green;">Oferta guardada correctamente</p>
