--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -35,4 +35,5 @@
 </body>
 {{> scripts}}
 <script src="cards.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
