--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -7,3 +7,4 @@
 <link rel="stylesheet" href="/css/subir.css">
 <link rel="stylesheet" href="/css/resultados.css">
 <link rel="stylesheet" href="/css/busqueda.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
