--- a/src/views/subir-oferta.hbs
+++ b/src/views/subir-oferta.hbs
@@ -19,7 +19,7 @@
             <form id="formSubir" action="oferta-nueva">
                 <div class="mb-3">
                     <label for="imagen" class="form-label">Imagen</label>
-                    <input type="file" class="form-control"  id="imagen" name="imagen">
+                    <input type="file" class="form-control"  id="imagen" name="imagen" value="">
                 </div>
                 <div class="mb-3">
                     <label for="lugar-url" class="form-label">Lugar o URL</label>
