--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -7,4 +7,9 @@
 <link rel="stylesheet" href="/css/subir.css">
 <link rel="stylesheet" href="/css/resultados.css">
 <link rel="stylesheet" href="/css/busqueda.css">
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="
+https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js
+"></script>
+<link href="
+https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.min.css
+" rel="stylesheet">
