--- a/src/public/css/busqueda.css
+++ b/src/public/css/busqueda.css
@@ -43,3 +43,19 @@
     border-bottom-right-radius: 2cm!important;
 }
 
+.card-img-top{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+}
+
+.card-body{
+    flex: 1 1 auto;
+    padding: 1rem 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+}
