--- a/src/views/busqueda.hbs
+++ b/src/views/busqueda.hbs
@@ -11,15 +11,16 @@
         <button type="submit" class="btn btn-primary">Buscar</button>
     </form>
     </div>
+    <h3>Ofertas Sugeridas</h3>
     <div class="container">
     <div id="container-ofertas" >
         {{#each respuesta}}
         <div class="card">
             <img src="{{imagen}}" class="card-img-top card-result" alt="Imagen no encontrada">
             <div class="card-body">
-                <h5 class="card-title">{{lugar}}</h5>
-                <p class="card-text">{{precio}}</p>
-                <p class="card-text">{{descripcion}}</p>
+                <h5 class="card-title">Lugar: {{lugar}}</h5>
+                <p class="card-text">Precio: {{precio}}</p>
+                <p class="card-text">Descripción: {{descripcion}}</p>
                 <a href="https://www.google.com/maps/place/{{latitud}},{{longitud}}/&ll={{latitud}},{{longitud}}" target="_blank" class="btn btn-primary">Ver en Mapa</a>
             </div>
         </div>
