--- a/src/views/partials/navuser.hbs
+++ b/src/views/partials/navuser.hbs
@@ -23,6 +23,11 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/logout">Salir</a>
                 </li>
+                {{#if admin}}
+                    <li class="nav-item">
+                    <a class="nav-link active" href="/admin">ADMIN</a>
+                </li>
+                {{/if}}
                 {{#if nombre}}
                 <li class="nav-item">
                     <a class="nav-link disabled" >Hola {{nombre}}</a>
