--- a/src/views/registro.hbs
+++ b/src/views/registro.hbs
@@ -27,7 +27,7 @@
 </main>
 
 {{#if respuestaCreacion}}
-    <div class="modal" tabindex="-1" id="myModal">
+    <div class="modal fade" tabindex="-1" id="myModal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
