--- a/src/views/subir-oferta.hbs
+++ b/src/views/subir-oferta.hbs
@@ -1,17 +1,15 @@
-
-
 {{#> template}}
 
-<main  id="main-subir-oferta">
+<main id="main-subir-oferta">
     <div class="card card-subir" style="width: 20rem;">
-        <div class="card-img-top" >
+        <div class="card-img-top">
             <img src="/img/subir.png" alt="Imagen no Disponible" id="vistaPrevia" style="height: 20rem; width:25rem">
         </div>
         <div class="card-body" id="body-card-subir">
             <form id="formSubir" action="oferta-nueva">
                 <div class="mb-3">
                     <label for="imagen" class="form-label">Imagen</label>
-                    <input type="file" class="form-control"  id="imagen" name="imagen" value="">
+                    <input type="file" class="form-control" id="imagen" name="imagen" value="">
                 </div>
                 <div class="mb-3">
                     <label for="lugar-url" class="form-label">Lugar o URL</label>
@@ -21,14 +19,14 @@
                     <label for="precio" class="form-label">Precio</label>
                     <input type="number" min="0" class="form-control" id="precio" name="precio" required>
                 </div>
-                <div class="mb-3">
-                    <label for="categoria" class="form-label">Categoría</label>
-                    <input list="categorias" type="text" class="form-control" id="categoria" name="categoria" required>
-                    <datalist id="categorias">
-                        {{#each categorias}}
-                        <option value="{{this}}">{{this}}</option>
-                        {{/each}}
-                    </datalist>
+                <div class="mb-3">                                 
+                <label for="categoria" class="form-label">Categoría</label>
+                <select class="form-select" aria-label="Default select example" id="categorias" name="categoria" required>
+                    <option value="">Selecciona una categoría</option>
+                    {{#each categorias}}
+                    <option value="{{this}}">{{this}}</option>
+                    {{/each}}
+                </select>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="descripcion">Descripción</label>
@@ -46,20 +44,21 @@
 <script src="/js/subir.js"></script>
 
 
-    <div class="modal" tabindex="-1" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Subir Oferta</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="recargarPagina()"></button>
-                </div>
-                <div class="modal-body">
-                    <p id="mensajeModal"></p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal" onclick="recargarPagina()">Cerrar</button>
-                </div>
+<div class="modal fade" tabindex="-1" id="myModal" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Subir Oferta</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                    onclick="recargarPagina()"></button>
+            </div>
+            <div class="modal-body">
+                <p id="mensajeModal"></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-dark" data-bs-dismiss="modal"
+                    onclick="recargarPagina()">Cerrar</button>
             </div>
         </div>
     </div>
-
+</div>
