--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -29,3 +29,30 @@
     </div>
 </main>
 {{/template}}
+
+{{#if mensaje}}
+    <div class="modal fade" tabindex="-1" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Registro</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>{{mensaje}}</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        window.addEventListener('load', function () {
+            var modal = document.getElementById('myModal');
+            var modalInstance = new bootstrap.Modal(modal);
+            modalInstance.show();
+        });
+
+    </script>
+{{/if}}
