--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -18,13 +18,13 @@
                 {{#if message.error}}
                     <div class="alert alert-danger">{{message.error}}</div>
                 {{/if}}
-                <button type="submit" class="btn btn-primary">Ingresar</button>
+                <button type="submit" class="btn btn-dark btn-login" >Ingresar</button>
             </form>
             
         </div>
         <div class="card-footer" >
             <p>¿No tienes una cuenta? Regístrate!</p>
-            <button class="btn btn-primary"><a href="/registro" style="color: white">Registrarse</a></button>
+            <button class="btn btn-dark btn-login"><a href="/registro" style="color: white">Registrarse</a></button>
         </div>
     </div>
 </main>
