--- a/src/views/contacto.hbs
+++ b/src/views/contacto.hbs
@@ -30,7 +30,7 @@
                     <label for="mensaje" class="form-label">Mensaje</label>
                     <textarea class="form-control" id="mensaje" rows="5" placeholder="Ingresa tu mensaje" name="mensaje" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-dark btn-contacto">Enviar</button>
             </form>
         </div>
     </div>
