--- a/src/views/registro.hbs
+++ b/src/views/registro.hbs
@@ -22,7 +22,7 @@
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
 
-        <button type="submit" class="btn btn-primary">Registrarse</button>
+        <button type="submit" class="btn btn-dark btn-registro">Registrarse</button>
     </form>
 </main>
 
