--- a/src/public/css/subir.css
+++ b/src/public/css/subir.css
@@ -49,6 +49,9 @@
     width: 100%!important;
 }
 
+.btn-registro{
+    width: 100%;
+}
 @media screen and (max-width: 992px) {
     .navbar-collapse {
         position: fixed;
