--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -15,17 +15,41 @@
                     <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
-                {{#if message.error}}
-                    <div class="alert alert-danger">{{message.error}}</div>
-                {{/if}}
-                <button type="submit" class="btn btn-primary">Ingresar</button>
+                <button type="submit" class="btn btn-dark btn-login">Ingresar</button>
             </form>
             
         </div>
         <div class="card-footer" >
             <p>¿No tienes una cuenta? Regístrate!</p>
-            <button class="btn btn-primary"><a href="/registro" style="color: white">Registrarse</a></button>
+            <button class="btn btn-dark btn-login"><a href="/registro" style="color: white">Registrarse</a></button>
         </div>
     </div>
 </main>
 {{/template}}
+
+{{#if mensajeError}}
+    <div class="modal" tabindex="-1" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Registro</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>{{mensajeError.mensaje}}</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        window.addEventListener('load', function () {
+            var modal = document.getElementById('myModal');
+            var modalInstance = new bootstrap.Modal(modal);
+            modalInstance.show();
+        });
+
+    </script>
+{{/if}}
