--- a/src/views/resultados.hbs
+++ b/src/views/resultados.hbs
@@ -18,7 +18,7 @@
                 <h5 class="card-title">Lugar: {{lugar}}</h5>
                 <p class="card-text">Precio: {{precio}}</p>
                 <p class="card-text">Descripción: {{descripcion}}</p>
-                <a href="https://www.google.com/maps/place/{{latitud}},{{longitud}}/&ll={{latitud}},{{longitud}}" target="_blank" class="btn btn-primary">Ver en Mapa</a>
+                <a href="https://www.google.com/maps/place/{{latitud}},{{longitud}}/&ll={{latitud}},{{longitud}}" target="_blank" class="btn btn-dark">Ver en Mapa</a>
             </div>
         </div>
 
