--- a/src/views/subir-oferta.hbs
+++ b/src/views/subir-oferta.hbs
@@ -34,7 +34,7 @@
                     <label class="form-label" for="descripcion">Descripción</label>
                     <input type="text" class="form-control" id="descripcion" name="descripcion" required>
                 </div>
-                <button type="submit" class="btn btn-primary" id="btn-subir">Subir</button>
+                <button type="submit" class="btn btn-dark" id="btn-subir">Subir</button>
             </form>
         </div>
     </div>
